webapp/ingress.yaml
apiVersion: v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
  - host: hello.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hellos
          servicePort: 8080
